Added a Navbar in this Weather App

--- a/Web Dev Projects_or_Portfolios/Current weather web app/index.html
+++ b/Web Dev Projects_or_Portfolios/Current weather web app/index.html
@@ -7,6 +7,10 @@
     <title>Weather App</title>
 </head>
 <body>
+    
+    <nav class="navbar">
+      <h1>Weather App</h1>
+    </nav>
 
     <div class="location">
         <h1 class="location-timezone">Timezone</h1>
