--- a/Web Dev Projects_or_Portfolios/Current weather web app/index.html
+++ b/Web Dev Projects_or_Portfolios/Current weather web app/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css" />
     <title>Weather App</title>
 </head>
@@ -24,6 +25,14 @@
         </div>   
         <div class="temperature-description">cold</div>
     </div>
+    
+    <footer class="footer" style="font-size: 20px; background-color: black;">
+        <a href="#"><i class="fa fa-facebook-f fa-2x" style="color: #3C5898;"></i></a>
+        <a href="#"><i class="fa fa-whatsapp fa-2x" style="color: #25d366;"></i></a>
+        <a href="#"><i class="fa fa-instagram fa-2x" style="color: #DD2A7B;"></i></a>
+        <a href="#"><i class="fa fa-twitter fa-2x" style="color: #55ACEE;"></i></a>
+        <a href="#"><i class="fa fa-linkedin-square fa-2x" style="color: #0077B5;"></i></a>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
