--- a/Web Dev Projects_or_Portfolios/Amazon-Prime-Login-Page-Clone/index.html
+++ b/Web Dev Projects_or_Portfolios/Amazon-Prime-Login-Page-Clone/index.html
@@ -1,3 +1,5 @@
+
+   
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Prime Video</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +32,7 @@
                 </span>
                 <span class="sigin">
                     <a href="https://www.primevideo.com/auth-redirect/ref=atv_nb_sign_in?signin=1&returnUrl=%2Fref%3Datv_nb_logo%3Fref_%3Datv_nb_logo"
-                        class="sigin">Sign In</a>
+                        class="signin">Sign In</a>
                 </span>
             </div>
         </header>
@@ -37,12 +40,12 @@
         <div class="content">
 
             <!-- Part-1 -->
-            <div class="login-now">
-                <div class="content-left">
-                    <h1 class="welcome">
+            <div  class="login-now">
+                <div  class="content-left">
+                    <h1 data-aos="fade-up" class="welcome">
                         Welcome to Prime Video
                     </h1>
-                    <p class="join"> Join Prime to watch latest movies, TV Shows and award winning Amazon-Originals </p>
+                    <p data-aos="fade-up" data-aos-delay="100" class="join"> Join Prime to watch latest movies, TV Shows and award winning Amazon-Originals </p>
 
                     <span class="login-prime"> <a
                             href="https://www.primevideo.com/region/eu/auth-redirect/ref_=dvm_mlp_in_ai_s_g_unrec_lego/ref=atv_mlp_default_ft?_encoding=UTF8&amp%3BreturnUrl=%2Fregion%2Ffr%2F&deviceTypeId=A13Q6A55DBZB7M&signin=1"
@@ -54,9 +57,9 @@
 
             <!-- Part-2 -->
             <div class="start">
-                <div class="content-right">
-                    <h1 class="Entertainment">Great Entertainment</h1>
-                    <p class="detail">With your prime membership, you have aceess to exclusive Amazon
+                <div  class="content-right">
+                    <h1 data-aos="fade-up" data-aos-delay="100" class="Entertainment">Great Entertainment</h1>
+                    <p data-aos="fade-up" data-aos-delay="100" class="detail">With your prime membership, you have aceess to exclusive Amazon
                         Originals,<br>Blockbuster
                         BollyWood Movies and regional movies and more.
                     </p>
@@ -72,8 +75,8 @@
             <!-- Part-3 -->
             <div class="memberships">
                 <div class="content-left-2">
-                    <h1 class="member-h1">One memberships, many benefits</h1>
-                    <p class="benefits">Your Prime membership also includes ad-free music along with unlimited
+                    <h1 data-aos="fade-up" data-aos-delay="100" class="member-h1">One memberships, many benefits</h1>
+                    <p data-aos="fade-up" data-aos-delay="100" class="benefits">Your Prime membership also includes ad-free music along with unlimited
                         free,<br>fast delivery on eligible items, exclusive accessto deals & more
                     </p>
                     <span class="started">
@@ -89,8 +92,8 @@
             <!-- Part-4 -->
             <div class="tv-stick">
                 <div class="content-right-2">
-                    <h1 class="firetv-h1">Even better with Fire TV Stick</h1>
-                    <p class="firetv-use">The biggest movies and TV shows are always better on a big screen.Simply plug
+                    <h1 data-aos="fade-up" data-aos-delay="100" class="firetv-h1">Even better with Fire TV Stick</h1>
+                    <p data-aos="fade-up" data-aos-delay="100" class="firetv-use">The biggest movies and TV shows are always better on a big screen.Simply plug
                         your
                         Amazon Fire TV Stick and stream on any HDTV.Press the voice button on the remote and say the
                         title
@@ -114,8 +117,8 @@
                             src="https://images-na.ssl-images-amazon.com/images/G/01/digital/video/Magellan_MLP/PV_Benefits_Devices.jpg"
                             alt="Watch anywhere">
                     </div>
-                    <h2 class="h22">Watch Anywhere</h2>
-                    <p class="para">Enjoy from the web or with the Prime Video app on your phone, tablet, or select
+                    <h2 data-aos="fade-up" data-aos-delay="100" class="h22">Watch Anywhere</h2>
+                    <p data-aos="fade-up" data-aos-delay="100" class="para">Enjoy from the web or with the Prime Video app on your phone, tablet, or select
                         Smart
                         TVs — on up to 3 devices at once.</p>
                 </div>
@@ -125,8 +128,8 @@
                             src="https://images-na.ssl-images-amazon.com/images/G/01/digital/video/Magellan_MLP/PV_Benefits_Download_IN.jpg"
                             alt="Download and go">
                     </div>
-                    <h2 class="h22">Download and go</h2>
-                    <p class="para">Watch offline on the Prime Video app when you download titles to your iPhone, iPad,
+                    <h2 data-aos="fade-up" data-aos-delay="100" class="h22">Download and go</h2>
+                    <p data-aos="fade-up" data-aos-delay="100" class="para">Watch offline on the Prime Video app when you download titles to your iPhone, iPad,
                         Tablet, or Android device.
                     </p>
                 </div>
@@ -136,8 +139,8 @@
                             src="https://images-na.ssl-images-amazon.com/images/G/01/digital/video/Magellan_MLP/300x300_Tile_1.png"
                             alt="Data saver">
                     </div>
-                    <h2 class="h22">Data Saver</h2>
-                    <p class="para">Control data usage while downloading and watching videos on select phones or
+                    <h2 data-aos="fade-up" data-aos-delay="100" class="h22">Data Saver</h2>
+                    <p data-aos="fade-up" data-aos-delay="100" class="para">Control data usage while downloading and watching videos on select phones or
                         tablets.
                     </p>
                 </div>
@@ -145,8 +148,8 @@
             <!-- Part-6 -->
             <div class="family">
                 <div class="content-left-3">
-                    <h1 class="friendly">Family Friendly</h1>
-                    <p class="friend">With easy to use Parental Controls and a dedicated kids page, enjoy secure,
+                    <h1 data-aos="fade-up" data-aos-delay="100" class="friendly">Family Friendly</h1>
+                    <p data-aos="fade-up" data-aos-delay="100" class="friend">With easy to use Parental Controls and a dedicated kids page, enjoy secure,
                         ad-free
                         kids entertainment. Kids can enjoy popular TV shows like Peppa Pig, Powerpuff Girls, and Chhota
                         Bheem.</p>
@@ -185,6 +188,10 @@
         </footer>
 
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 
 </body>
 
