added css based shopping app

--- a/HTML projects/css_based_shopping_app/index.html
+++ b/HTML projects/css_based_shopping_app/index.html
@@ -33,7 +33,7 @@
                <img src="https://source.unsplash.com/1600x500/?shopping, ecommerce" alt="">
            </div>
            <div class="card">
-               <h2 class="my-2">Join the shoes club</h2>
+               <h2 class="my-2">Join our shoes club</h2>
                <div class="cards">
                <div class="card-item">
                    <img src="https://source.unsplash.com/160x160/?heels, ecommerce" alt="" width="220px">
