--- a/HTML projects/Calculator.html
+++ b/HTML projects/Calculator.html
@@ -44,35 +44,34 @@
 <div class="container">
     <table border="1" cellspacing="0">
         <tr>
-            <td colspan="4" id="imputlabel">0</td>
+            <td colspan="4" id="inputLabel">0</td>
         </tr>
         <tr>
-            <td colspan="3">
-                <button onclick="pushBtn(this);">AC</button></td>
-                <td><button onclick="pushBtn(this);">/</button></td>
+            <td colspan="3"><button onclick="pushBtn(this);">AC</button></td>
+            <td><button onclick="pushBtn(this);">/</button></td>
         </tr>
         <tr>
             <td><button onclick="pushBtn(this);">7</button></td>
-                <td><button onclick="pushBtn(this);">8</button></td>
-                    <td><button onclick="pushBtn(this);">9</button></td>
-                        <td><button onclick="pushBtn(this);">*</button></td>
+            <td><button onclick="pushBtn(this);">8</button></td>
+            <td><button onclick="pushBtn(this);">9</button></td>
+            <td><button onclick="pushBtn(this);">*</button></td>
         </tr>
         <tr>
             <td><button onclick="pushBtn(this);">4</button></td>
-                <td><button onclick="pushBtn(this);">5</button></td>
-                    <td><button onclick="pushBtn(this);">6</button></td>
-                        <td><button onclick="pushBtn(this);">-</button></td>
+            <td><button onclick="pushBtn(this);">5</button></td>
+            <td><button onclick="pushBtn(this);">6</button></td>
+            <td><button onclick="pushBtn(this);">-</button></td>
         </tr>
         <tr>
             <td><button onclick="pushBtn(this);">1</button></td>
-                <td><button onclick="pushBtn(this);">2</button></td>
-                    <td><button onclick="pushBtn(this);">3</button></td>
-                        <td><button onclick="pushBtn(this);">+</button></td>
+            <td><button onclick="pushBtn(this);">2</button></td>
+            <td><button onclick="pushBtn(this);">3</button></td>
+            <td><button onclick="pushBtn(this);">+</button></td>
         </tr>
         <tr>
             <td colspan="2"><button onclick="pushBtn(this);">0</button></td>
             <td><button onclick="pushBtn(this);">.</button></td>
-                <td><button onclick="pushBtn(this);">=</button></td>
+            <td><button onclick="pushBtn(this);">=</button></td>
         </tr>
     </table>
 </div>  
